...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Students" id="Ayo-hS-RPT">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="IF7-NV-PhS">
                            <connections>
...
                                <rect key="frame" x="20" y="160" width="374" height="84"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Student Name:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="um8-NJ-6Cy">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Student Email:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wVi-A4-s68">
                                        <rect key="frame" x="0.0" y="50" width="374" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                <state key="normal" title="Edit Student Info">
                                    <color key="titleColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                </state>
...
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                <color key="tintColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                <state key="normal" title="Save Student Info"/>
                                <connections>
                                    <action selector="saveStudentInfo:" destination="0iv-3l-rTy" eventType="touchUpInside" id="Cfj-c4-jmM"/>
...
                                <color key="backgroundColor" systemColor="opaqueSeparatorColor" red="0.77647058820000003" green="0.77647058820000003" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                <state key="normal" title="Save">
                                    <color key="titleColor" systemColor="tertiarySystemBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                        <viewLayoutGuide key="safeArea" id="0l2-tV-DcT"/>
                    </view>
                    <navigationItem key="navigationItem" title="New Student Info" id="5Bw-Cs-eLO">
                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="Zid-GP-i8w">
                            <connections>
...
                                <rect key="frame" x="20" y="148" width="374" height="84"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="36Y-pW-85X">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" textContentType="username"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jKl-aU-QYz">
                                        <rect key="frame" x="0.0" y="50" width="374" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <segments>
                                    <segment title="Sign In"/>
                                    <segment title="Sign Up"/>
                                </segments>
...
